2016-10-12 (0.12.8)
	Added android speak API

2016-10-08 (0.12.8)
	Fix web server file handling in windows version

2016-10-07 (0.12.8)
	Added android SENSOR handling

2016-10-02 (0.12.8)
	Fix regression with array parsing

2016-10-02 (0.12.8)
	Updated error message when calling built-in FUNC without assigning the result
	Fix TAB to use character positions not pixels
	Fixed issue with nested try/catch

2016-10-01 (0.12.8)
	Fixed NOSOUND

2016-09-29 (0.12.8)
	Added android location API
	Added sound API
	Play .WAV files using PLAY("file://" + path)

2016-09-19 (0.12.8)
	Fix error handling for invalid JOIN input
	Fix SPLIT to include final empty position

2016-09-18 (0.12.8)
	Clear keyboard buffer before pause.
	Fix cursor display with INPUT command

2016-08-21 (0.12.7)
	Added 'web' sub-project (sbasicw)

2016-07-30 (0.12.7)
	Fixed value of i when FOR loop body not executed (node/1611)

2016-07-30 (0.12.7)
	Fixed screen switching when program screen has different font size

2016-07-16 (0.12.7)
	Fixed editor display issue with escaped quotes

2016-07-04 (0.12.7)
	Updated ARRAY command to handle 2d arrays
	Fixed issue with INSTR
	Fixed memory issue with REPLACE

2016-07-03 (0.12.7)
	Updated welcome screen
	Fixed some memory access issues uncovered with new test all.bas

2016-06-24 (0.12.7)
	Renamed str var "size" field "length"
	var cleanup now uses v_detach()
	implemented var pooling

2016-06-18 (0.12.7)
	Fixed memory access issue with JOIN
	Fixed memory access issue with SPRINT

2016-06-15 (0.12.7)
	Added editor double click to select word
	Fixed editor stability issues with undo/redo
	Fixed editor scrolling after paste

2016-06-12 (0.12.7)
	Updated welcome screen
	Added editor F10 option to set the command$ variable
	Fixed editor cursor flicker issue
	Fixed editor find dialog paste support

2016-06-12 (0.12.7)
	Fix infinite loop when printing FUNC with extra args

2016-06-07 (0.12.7)
	Fix memory leak with LINPUT command