@@ -1,3 +1,7 @@
+2016-10-20 (0.12.8)
+	Now returns an error when arguments passed to:
+	TIMER, TICKS, PROGLINE, XPOS, YPOS, RND
+
 2016-10-12 (0.12.8)
 	Added android speak API
 
